Pagina login creada

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             </div>
             <div class="card_back">
                 <h2>Matafuegos de 1kg, 3,5kg, 5kg y 10kg.</h2>
+                <p>Diseñados para proteger áreas que contienen riesgos de fuego Clase A (combustibles sólidos), Clase B
+                    (combustibles líquidos y gaseosos) o Clase C (equipos eléctricos energizados).</p>
                 <button class="btn_card">Consulte!</button>
             </div>
         </div>
@@ -83,6 +85,7 @@
             </div>
             <div class="card_back">
                 <h2>Matafuegos de 3L y 5L.</h2>
+                <p>Diseñados para proteger áreas que contienen riesgos de fuego Clase A (combustibles sólidos).</p>
                 <button class="btn_card">Consulte!</button>
             </div>
         </div>
@@ -92,6 +95,8 @@
             </div>
             <div class="card_back">
                 <h2>Matafuegos de 3,5kg, 5kg y 10kg.</h2>
+                <p>Diseñados para proteger áreas que contienen riesgos de incendio Clase B (combustibles líquidos y
+                    gaseosos) y Clase C (equipos eléctricos energizados).</p>
                 <button class="btn_card">Consulte!</button>
             </div>
         </div>
@@ -101,6 +106,8 @@
             </div>
             <div class="card_back">
                 <h2>Matafuegos de 3,5kg y 5kg.</h2>
+                <p>Diseñados especialmente para extinguir fuegos de aceites vegetales en freidoras de cocinas
+                    comerciales.</p>
                 <button class="btn_card">Consulte!</button>
             </div>
         </div>
@@ -110,6 +117,8 @@
             </div>
             <div class="card_back">
                 <h2>Matafuegos de 5kg.</h2>
+                <p>Diseñados para proteger áreas que contienen riesgos de fuego Clase A (combustibles sólidos), Clase B
+                    (combustibles líquidos y gaseosos) y Clase C (equipos eléctricos energizados).</p>
                 <button class="btn_card">Consulte!</button>
             </div>
         </div>
