--- a/html/login.html
+++ b/html/login.html
@@ -52,7 +52,24 @@
             <div class="container_login">
                 <div class="box_login">
                     <div class="content_login">
-
+                        <div class="box_one">
+                            <div class="box_log">
+                                <p>Email o Usuario</p>
+                                <input type="email" name="" id="" class="input_login">
+                            </div>
+                            <div class="box_log">
+                                <p>Contraseña</p>
+                                <input type="password" name="" id="" class="input_login">
+                            </div>
+                            <button class="btn_login">INGRESAR</button>
+                        </div>
+                        <div class="box_two">
+                            <h1>BIENVENIDO</h1>
+                            <div class="box_welcome">
+                                <p><a href="#">¿Olvidaste tu contraseña?</a></p>
+                                <p><a href="/html/register.html">¿No tenés cuenta? Registrate!</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
