--- a/html/login.html
+++ b/html/login.html
@@ -32,8 +32,6 @@
                 <img src="../img/Seguridad_del_sol-removebg-preview.png" alt="">
             </div>
             <nav class="navbar">
-                <label for="toggle_menu" class="icon_container"><i class="fas fa-bars"></i></label>
-                <input type="checkbox" name="" id="toggle_menu">
                 <ul class="list">
                     <li>
                         <a href="../index.html" id="" class="hov">Inicio</a>
@@ -52,6 +50,7 @@
             <div class="container_login">
                 <div class="box_login">
                     <div class="content_login">
+                        <h1>BIENVENIDO</h1>
                         <div class="box_one">
                             <div class="box_log">
                                 <p>Email o Usuario</p>
@@ -62,10 +61,14 @@
                                 <input type="password" name="" id="" class="input_login">
                             </div>
                             <button class="btn_login">INGRESAR</button>
+                            <div class="box_welcome_log">
+                                <p><a href="#">¿Olvidaste tu contraseña?</a></p>
+                                <p><a href="/html/register.html">¿No tenés cuenta? Registrate!</a></p>
+                            </div>
                         </div>
                         <div class="box_two">
                             <h1>BIENVENIDO</h1>
-                            <div class="box_welcome">
+                            <div class="box_welcome_two">
                                 <p><a href="#">¿Olvidaste tu contraseña?</a></p>
                                 <p><a href="/html/register.html">¿No tenés cuenta? Registrate!</a></p>
                             </div>
