--- a/html/register.html
+++ b/html/register.html
@@ -32,8 +32,6 @@
                 <img src="../img/Seguridad_del_sol-removebg-preview.png" alt="">
             </div>
             <nav class="navbar">
-                <label for="toggle_menu" class="icon_container"><i class="fas fa-bars"></i></label>
-                <input type="checkbox" name="" id="toggle_menu">
                 <ul class="list">
                     <li>
                         <a href="../index.html" id="" class="hov">Inicio</a>
@@ -42,6 +40,63 @@
             </nav>
         </div>
     </header>
+
+    <!---------- SECTION LOGIN ---------->
+
+    <section class="section_container">
+        <div class="positions">
+            <div class="container_back">
+            </div>
+            <div class="container_login">
+                <div class="box_login">
+                    <div class="content_login">
+                        <h1>NUEVA CUENTA</h1>
+                        <div class="box_one">
+                            <div class="box_column">
+                                <div class="column">
+                                    <div class="box_log">
+                                        <p>Nombre/s</p>
+                                        <input type="text" name="" id="" class="input_login">
+                                    </div>
+                                    <div class="box_log">
+                                        <p>Apellido/s</p>
+                                        <input type="text" name="" id="" class="input_login">
+                                    </div>
+                                    <div class="box_log">
+                                        <p>Email</p>
+                                        <input type="email" name="" id="" class="input_login">
+                                    </div>
+                                    <div class="box_log">
+                                        <p>DNI</p>
+                                        <input type="number" name="" id="" class="input_login">
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="box_log">
+                                        <p>Teléfono</p>
+                                        <input type="number" name="" id="" class="input_login">
+                                    </div>
+                                    <div class="box_log">
+                                        <p>Nombre de Usuario</p>
+                                        <input type="text" name="" id="" class="input_login">
+                                    </div>
+                                    <div class="box_log">
+                                        <p>Contraseña</p>
+                                        <input type="password" name="" id="" class="input_login">
+                                    </div>
+                                    <div class="box_log">
+                                        <p>Confirmar Contraseña</p>
+                                        <input type="password" name="" id="" class="input_login">
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="btn_login"><a href="./login.html">INGRESAR</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- FOOTER -->
 
