--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--------- REDES --------->
     <div class="wpp">
-        <a href="https://wa.me/5491133608192?text=Solicito Información">
+        <a href="https://wa.me/5491133608192?text=Solicito Información sobre">
             <img src="/img/WhatsApp.svg.webp" alt="">
         </a>
     </div>
@@ -181,7 +181,8 @@
                 <div class="info_footer">
                     <p><a href="#">Información Legal</a></p>
                     <p><a href="#">Política de Privacidad</a></p>
-                    <p>Diseñador Web: <a href="https://github.com/santo1810" target="_blank">Santiago Madariaga</a></p>
+                    <p>Diseñador Web: <a href="https://github.com/santiimadariaga" target="_blank">Santiago
+                            Madariaga</a></p>
                 </div>
                 <div class="container_logo">
                     <div class="logo_footer">
@@ -193,14 +194,15 @@
                         <div class="content_ico">
                             <img src="img/wpp-ico.ico" alt="">
                         </div>
-                        <p><a href="https://wa.me/5491133608192?text=Solicito Información" target="_blank">WhatsApp</a>
+                        <p><a href="https://wa.me/5491133608192?text=Solicito Información sobre"
+                                target="_blank">WhatsApp</a>
                         </p>
                     </div>
                     <div class="content_contact space">
                         <div class="content_ico">
                             <img src="img/email-ico.ico" alt="">
                         </div>
-                        <p><a href="mailto:seguridad.delsol@gmail.com?Subject=Solicito Información">Gmail</a></p>
+                        <p><a href="mailto:seguridad.delsol@gmail.com?Subject=Solicito Información sobre">Gmail</a></p>
                     </div>
                 </div>
             </div>
